--- a/Aplicacion 05.html
+++ b/Aplicacion 05.html
@@ -70,7 +70,7 @@
         <p> Resultado </p>
       <p> IMC </p>
       
-      <div id="imc">
+      <div id="imc" style="color:#0C0">
             
       </div>
   </div>
